Create Book and addBookToLibrary functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table class="book-table">
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+        </tr>
+    </table>
 </body>
 </html>
