Add ability to add books to table

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
             <th>Author</th>
         </tr>
     </table>
+    <div>
+        <input type="text" name="title" class="title-input" placeholder="Book Title">
+        <input type="text" name="author" class="author-input" placeholder="Author Name">
+        <button class="add-book-button">Add New Book</button>
+    </div>
 </body>
 </html>
