Add read button and delete button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <tr>
             <th>Title</th>
             <th>Author</th>
+            <th>Read/Not Read</th>
+            <th>Delete</th>
         </tr>
     </table>
     <div>
